corrupted version, migrating native library codes to jing-bindings